--- a/ltmain.in
+++ b/ltmain.in
@@ -2016,6 +2016,7 @@ extern \"C\" {
 # define lt_ptr_t void *
 #else
 # define lt_ptr_t char *
+# define const
 #endif
 
 /* The mapping between symbol names and symbols. */
