--- a/ltconfig.in
+++ b/ltconfig.in
@@ -1650,6 +1650,8 @@ bsdi4*)
   soname_spec='${libname}.so'
   finish_cmds='PATH="$PATH:/sbin" ldconfig $libdir'
   shlibpath_var=LD_LIBRARY_PATH
+  check_shared_deplibs_method='file_magic ELF 32-bit LSB shared object'
+  sys_lib_search_path="/shlib /usr/lib /usr/local/lib `echo $LD_LIBRARY_PATH | sed -e 's/:/ /g'`"
   ;;
 
 cygwin32* | mingw32*)
